--- a/client/src/package.json
+++ b/client/src/package.json
@@ -8,5 +8,12 @@
     "mongoose": "^6.8.2",
     "multer": "^1.4.5-lts.1",
     "react-router-dom": "^6.6.1"
+  },
+  "devDependencies": {
+    "eslint": "^8.57.0",
+    "eslint-config-react-app": "^7.0.1",
+    "react-scripts": "^5.0.1",
+    "@babel/plugin-proposal-private-property-in-object": "^7.18.6",
+    "@babel/eslint-parser": "^7.21.0"
   }
 }
